crates/cribo/tests/snapshots/bundled_code@ast_rewriting_loop_else_globals.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_loop_else_globals/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('loops', '_cribo_init___cribo_bca834_loops', 'loops', False)
loops = _cribo.types.SimpleNamespace(__name__='loops', __initializing__=False, __initialized__=False)
_cribo_loops_last_result = None
_cribo_loops_loop_count = None
def _cribo_init___cribo_bca834_loops(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    global _cribo_loops_last_result, _cribo_loops_loop_count
    print("loading loops")
    last_result = "none"
    _cribo_loops_last_result = last_result
    self.last_result = _cribo_loops_last_result
    loop_count = 0
    _cribo_loops_loop_count = loop_count
    self.loop_count = _cribo_loops_loop_count

    def find_item(items, target):
        global _cribo_loops_last_result
        for item in items:
            if item == target:
                _cribo_loops_last_result = f"found:{target}"
                break
        else:
            _cribo_loops_last_result = f"missing:{target}"
        return _cribo_loops_last_result
    self.find_item = find_item

    def count_up(limit):
        global _cribo_loops_loop_count
        _cribo_loops_loop_count = 0
        loops.loop_count = _cribo_loops_loop_count
        while _cribo_loops_loop_count < 5:
            _cribo_loops_loop_count += 1
            if _cribo_loops_loop_count >= limit:
                break
        else:
            _cribo_loops_loop_count = -1
        return _cribo_loops_loop_count
    self.count_up = count_up
    self.__initialized__ = True
    self.__initializing__ = False
    return self
loops.__init__ = _cribo_init___cribo_bca834_loops
loops = _cribo_init___cribo_bca834_loops(loops)
find_item = loops.find_item
count_up = loops.count_up
found = find_item([1, 2, 3], 2)
print(f"found: {found}")
not_found = find_item([1, 2, 3], 99)
print(f"not found: {not_found}")
count = count_up(3)
print(f"count up to 3: {count}")
count2 = count_up(10)
print(f"count up to 10: {count2}")
