crates/cribo/tests/snapshots/bundled_code@ast_rewriting_regular_import_aliases.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/ast_rewriting_regular_import_aliases/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('utils', None, 'utils', True)
_cribo_finder.register('utils.helpers', None, None, False, {'UtilityClass': 'UtilityClass'})
utils_helpers = _cribo.types.SimpleNamespace(__name__='utils.helpers', __doc__='Utility module for testing regular import aliases.')
utils = _cribo.types.SimpleNamespace(__name__='utils', __initializing__=False, __initialized__=False, __path__=[])
utils.helpers = utils_helpers
"""Utility module for testing regular import aliases."""
def helper_function():
    """A simple helper function."""
    return "helper_result"
class UtilityClass:
    """A simple utility class."""

    def __init__(self, value):
        self.value = value

    def get_value(self):
        return self.value
UtilityClass.__module__ = 'utils.helpers'
utils_helpers.UtilityClass = UtilityClass
utils_helpers.helper_function = helper_function
utils_config = _cribo.types.SimpleNamespace(__name__='utils.config', __doc__='Configuration module for testing regular import aliases.')
utils.config = utils_config
"""Configuration module for testing regular import aliases."""
DEFAULT_CONFIG = {"debug": True, "timeout": 30}
def get_config():
    """Get the default configuration."""
    return DEFAULT_CONFIG.copy()
utils_config.DEFAULT_CONFIG = DEFAULT_CONFIG
utils_config.get_config = get_config
'''\nTest fixture for regular import statements with aliases (non-"from" imports).\nThis exercises the code path in ast_rewriter.rs around lines 216-228.\n'''
operating_system = _cribo.os
j = _cribo.json
system_module = _cribo.sys
abc_collections = _cribo.collections.abc
url_parser = _cribo.urllib.parse
xml_tree = _cribo.xml.etree.ElementTree
helper_utils = utils.helpers
config_module = utils.config
math = _cribo.math
random = _cribo.random
datetime = _cribo.datetime
def main():
    """Test function that uses the imported modules with aliases."""
    print("Current working directory: /test/working/directory")
    data = {"test": "value"}
    json_str = _cribo.json.dumps(data)
    print("JSON string:", json_str)
    print("Python version: sys.version_info(major=3, minor=13, micro=3, releaselevel='final', serial=0)")
    print("ABC module available:", hasattr(_cribo.collections.abc, "ABC"))
    parsed_url = _cribo.urllib.parse.urlparse("https://example.com/path")
    print("Parsed URL:", parsed_url.netloc)
    root = _cribo.xml.etree.ElementTree.Element("root")
    _cribo.xml.etree.ElementTree.SubElement(root, "child")
    print("XML element tag:", root.tag)
    result = helper_utils.helper_function()
    print("Helper result:", result)
    util_obj = helper_utils.UtilityClass("test_value")
    print("Utility value:", util_obj.get_value())
    config = config_module.get_config()
    print("Config debug:", config["debug"])
    print("Pi value:", _cribo.math.pi)
    _cribo.random.seed(42)
    print("Random number:", _cribo.random.randint(1, 100))
    return "regular_import_aliases_test_complete"
if __name__ == "__main__":
    result = main()
    print(result)
config = utils.config
helpers = utils.helpers
