crates/cribo/tests/snapshots/bundled_code@builtin_types.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/builtin_types/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('compat_module', '_cribo_init___cribo_97f65c_compat_module', 'compat_module', False)
compat_module = _cribo.types.SimpleNamespace(__name__='compat_module', __initializing__=False, __initialized__=False)
_cribo_finder.bind('compat_module', compat_module)
def _cribo_init___cribo_97f65c_compat_module(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = ''
    self.__doc__ = 'Module with side effects that assigns builtin types to variables.\n\nThis minimal test case reproduces the bug where builtin types are incorrectly\ntransformed to module.str, module.int, etc. when the bundler wraps modules\nwith side effects in init functions.\n'
    """Module with side effects that assigns builtin types to variables.\n\nThis minimal test case reproduces the bug where builtin types are incorrectly\ntransformed to module.str, module.int, etc. when the bundler wraps modules\nwith side effects in init functions.\n"""
    print("Loading compat module...")
    str = __import__('builtins').str
    self.str = str
    int = __import__('builtins').int
    self.int = int
    bytes = __import__('builtins').bytes
    self.bytes = bytes
    builtin_str = __import__('builtins').str
    self.builtin_str = builtin_str
    builtin_int = __import__('builtins').int
    self.builtin_int = builtin_int
    builtin_bytes = __import__('builtins').bytes
    self.builtin_bytes = builtin_bytes
    basestring = __import__('builtins').str, __import__('builtins').bytes
    self.basestring = basestring
    numeric_types = __import__('builtins').int, float
    self.numeric_types = numeric_types
    self.__initialized__ = True
    self.__initializing__ = False
    return self
compat_module.__init__ = _cribo_init___cribo_97f65c_compat_module
"""Test that builtin type assignments work in modules with side effects."""
compat_module = _cribo_init___cribo_97f65c_compat_module(compat_module)
builtin_str = compat_module.builtin_str
builtin_int = compat_module.builtin_int
basestring = compat_module.basestring
numeric_types = compat_module.numeric_types
assert builtin_str is str
assert builtin_int is int
assert builtin_str("test") == "test"
assert builtin_int("42") == 42
assert basestring == (str, bytes)
assert numeric_types == (int, float)
print("All tests passed!")
